Update JVM_GC.md